Fix controller tests